--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,83 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  text-align: center;
+  font-size: 2em;
+  margin: 1em;
+}
+
+h2.home-page-header {
+  font-size: 30px;
+}
+
+div.home-page-div {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* border: 5px solid #FFFF00; */
+  /* padding: 10px; */
+  /* margin: 100px 200px */
+}
+
+.book-card {
+  /* display: flex; */
+  display: inline-block;
+  /* display: inline-grid; */
+  width: 30%;
+  box-sizing: border-box;
+	box-shadow: 2px 2px 25px 0px;
+  margin: 20px;
+}
+
+.book-card-image {
+  width: 100%;
+  height: 10%;
+}
+
+.book-card-title {
+  margin: 5px 0px 0px;
+  text-align: center;
+  max-width: 100%;
+}
+
+.book-card-author {
+  margin: 1px 0px 0px;
+  text-align: center;
+  font-size: small;
+  font-style: italic;
+}
+
+.book-card-details {
+  padding: 0 1em 1em 1em;
+	border-bottom: 1px solid;
+  width: 90%;
+}
+
+.book-card-genre {
+  margin: 2px;
+  padding: 2px 5px;
+  background-color: rgb(22, 118, 234);
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.book-card-action-buttons {
+  margin: 5px;
+  text-align: center;
+}
+
+.book-card-action-button {
+  margin: 2px;
+}
+
+.book-list-elements-div {
+  text-align: center;
+  /* float: left; */
+  /* width: 50%; */
+}
+
