--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,7 +87,13 @@ div.home-page-div {
 
 .book-list-elements-div {
   text-align: center;
-  /* float: left; */
-  /* width: 50%; */
+}
+
+.review-on-book-details {
+  /* display: inline-block; */
+  /* width: 60%; */
+  margin: 20px 100px;
+  border-top: 1px solid grey;
+  /* border-bottom: 1px solid grey; */
 }
 
