--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,10 @@ h1 {
   margin: 1em;
 }
 
+span {
+  display: inline-block;
+}
+
 h2.home-page-header {
   font-size: 30px;
 }
@@ -76,12 +80,12 @@ div.home-page-div {
   border-radius: 5px;
 }
 
-.book-card-action-buttons {
+.card-action-buttons {
   margin: 5px;
   text-align: center;
 }
 
-.book-card-action-button {
+.card-action-button {
   margin: 2px;
 }
 
