--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --label-red: rgb(184, 77, 77);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -109,4 +113,44 @@ div.home-page-div {
   margin: 5px;
   height: 50px;
   font-size: large;
+}
+
+input[type=text], [type=number], [type=date], select, textarea {
+  width: 100%;
+  /* text-align: center; */
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: var(--label-red);
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+label {
+  color: var(--label-red);
+  font-weight: bolder;
+}
+
+div.form-container {
+  /* border-radius: 5px; */
+  padding: 20px;
+  margin: 1em 20em;
+  background-color: rgb(249, 246, 246);
 }
