--- a/client/src/index.css
+++ b/client/src/index.css
@@ -133,6 +133,10 @@ input[type=text], [type=number], [type=date], select, textarea {
   box-sizing: border-box;
 }
 
+textarea {
+  resize: vertical;
+}
+
 input[type=submit] {
   width: 100%;
   background-color: var(--label-red);
