--- a/client/src/index.css
+++ b/client/src/index.css
@@ -137,21 +137,27 @@ textarea {
   resize: vertical;
 }
 
-input[type=submit] {
-  width: 100%;
+input[type=submit], button.cancel {
+  width: 40%;
   background-color: var(--label-red);
   color: white;
   font-weight: bold;
   font-size: 20px;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 8px 5px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover, button.cancel:hover {
   background-color: #45a049;
+}
+
+div.form-action-buttons {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
 }
 
 label {
