--- a/client/src/index.css
+++ b/client/src/index.css
@@ -111,13 +111,12 @@ div.home-page-div {
   border-top: 1px solid grey;
 }
 
-.add-new-div {
+.add-edit-button-div {
   text-align: center;
   margin: 20px;
 }
 
-.add-new-button {
-  /* color: */
+.add-edit-button {
   margin: 5px;
   height: 50px;
   font-size: large;
